--- a/src/app/UI Folder/nav-bar/admin-nav/admin-nav.component.html
+++ b/src/app/UI Folder/nav-bar/admin-nav/admin-nav.component.html
@@ -64,7 +64,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="sidebar-item flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                    <a href="/analytics" class="sidebar-item flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                         <i class="fas fa-chart-bar text-gray-500 group-hover:text-green-600"></i>
                         <span class="ml-3">Analytics</span>
                     </a>
