--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -84,10 +84,10 @@
     </p>
 
     <div class="mt-6">
-      <button (click)="testCompleted.emit(testResult.isPassed)"
-              class="px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
-        Continue
-      </button>
+    <button (click)="testCompleted.emit(testResult)"
+          class="px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
+    Continue
+  </button>
     </div>
   </div>
 </div>
