UI Audits - 95% of System Works

--- a/src/app/UI Folder/nav-bar/admin-nav/admin-nav.component.html
+++ b/src/app/UI Folder/nav-bar/admin-nav/admin-nav.component.html
@@ -46,7 +46,7 @@
         <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
             <ul class="space-y-2 font-medium">
                 <li>
-                    <a href="/admin-dashboard" class="sidebar-item active flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+                    <a href="/analytics" class="sidebar-item active flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                         <i class="fas fa-tachometer-alt text-gray-500 group-hover:text-green-600"></i>
                         <span class="ml-3">Dashboard</span>
                     </a>
@@ -61,12 +61,6 @@
                     <a href="/manage-courses" class="sidebar-item flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
                         <i class="fas fa-book-open text-gray-500 group-hover:text-green-600"></i>
                         <span class="ml-3">Courses</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/analytics" class="sidebar-item flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
-                        <i class="fas fa-chart-bar text-gray-500 group-hover:text-green-600"></i>
-                        <span class="ml-3">Analytics</span>
                     </a>
                 </li>
                 <li>
