--- a/src/app/UI Folder/nav-bar/nav-bar.component.html
+++ b/src/app/UI Folder/nav-bar/nav-bar.component.html
@@ -17,8 +17,8 @@
             </a>
           </li>
           <li>
-            <a href="/community" class="border-transparent text-gray-600 hover:border-green-300 hover:text-green-700 px-3 py-2 border-b-2 text-sm font-medium transition-colors duration-200">
-              Community
+            <a href="/pulse-discovery" class="border-transparent text-gray-600 hover:border-green-300 hover:text-green-700 px-3 py-2 border-b-2 text-sm font-medium transition-colors duration-200">
+             Pulse Discovery
             </a>
           </li>
           <li>
